[add] _sass, assets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{% t global.country %}</title>
+    <link rel="stylesheet" href="../_sass/test.css">
   </head>
   <body>
     <header class="header">
