--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>{% t global.country %}</title>
     <link rel="stylesheet" href="../_sass/test.css">
+    <script src="../assets/js/test.js" defer></script>
   </head>
   <body>
     <header class="header">
